--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "express-simple-server",
-  "version": "1.0.0",
-  "description": "Simple Express Server",
+  "name": "knative-canary-app",
+  "version": "2.0.0",
+  "description": "Returns OK if up for atlas monitoring purposes",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "wpe-build": "node build.js"
+    "start": "node index.js"
   },
-  "author": "Konrad Glowacki <konrad.glowacki@wpengine.com> (wpengine.com)",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.17.1"
-  }
+  "author": "nebula",
+  "dependencies": {}
 }
