--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "knative-canary-app",
-  "version": "2.0.0",
-  "description": "Returns OK if up for atlas monitoring purposes",
+  "name": "express-simple-server",
+  "version": "1.0.0",
+  "description": "Simple Express Server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "wpe-build": "node build.js"
   },
-  "author": "nebula",
-  "dependencies": {}
+  "author": "Konrad Glowacki <konrad.glowacki@wpengine.com> (wpengine.com)",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1"
+  }
 }
