--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Simple Express Server",
   "main": "index.js",
   "engines": {
+    "node": "14"
   },
   "scripts": {
     "start": "node index.js",
-    "wpe-build": "enpm config list"
+    "wpe-build": "npm config list"
   },
   "author": "Konrad Glowacki <konrad.glowacki@wpengine.com> (wpengine.com)",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1"
-  }
+  },
+  "packageManager": "yarn@1.22.11"
 }
